app/02_MemoryAllocation/SAMV71_Xplained_Ultra/$STDERR.txt
D:\SAMV71x\app\02_DynamicMemoryAllocationHandler\app\02_MemoryAllocation\src\Mem_Alloc.c:25:5: error: initializer element is not constant
     };
     ^
D:\SAMV71x\app\02_DynamicMemoryAllocationHandler\app\02_MemoryAllocation\src\Mem_Alloc.c:25:5: error: (near initialization for 'MemControl.FreeBytes')
